Json, tabla de dispersión, y árbol hecho.

--- a/ClaveDicotomica/nbproject/project.properties
+++ b/ClaveDicotomica/nbproject/project.properties
@@ -35,7 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ClaveDicotomica
 endorsed.classpath=
 excludes=
-file.reference.json-20250107.jar=C:\\Users\\jesus\\Downloads\\json-20250107.jar
+file.reference.json-20250107.jar=C:\\Users\\PC\\Downloads\\json-20250107.jar
 includes=**
 jar.compress=false
 javac.classpath=\
