Agregada opcion de grafo (hay errores en la carga de los json )

--- a/ClaveDicotomica/nbproject/project.properties
+++ b/ClaveDicotomica/nbproject/project.properties
@@ -35,15 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ClaveDicotomica
 endorsed.classpath=
 excludes=
-file.reference.gs-core-2.0.jar=C:\\Users\\PC\\Downloads\\gs-core-2.0.jar
-file.reference.gs-ui-swing-2.0.jar=C:\\Users\\PC\\Downloads\\gs-ui-swing-2.0.jar
-file.reference.json-20250107.jar=C:\\Users\\PC\\Downloads\\json-20250107.jar
+file.reference.org.json-1.6-20240205.jar=C:\\Users\\jesus\\Downloads\\org.json-1.6-20240205.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.json-20250107.jar}:\
-    ${file.reference.gs-core-2.0.jar}:\
-    ${file.reference.gs-ui-swing-2.0.jar}
+    ${file.reference.org.json-1.6-20240205.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
