Chequear las librerías otra vez.(2)

--- a/ClaveDicotomica/nbproject/project.properties
+++ b/ClaveDicotomica/nbproject/project.properties
@@ -35,9 +35,9 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ClaveDicotomica
 endorsed.classpath=
 excludes=
-file.reference.gs-core-2.0.jar=C:\\Users\\PC\\Downloads\\gs-core-2.0.jar
-file.reference.gs-ui-swing-2.0.jar=C:\\Users\\PC\\Downloads\\gs-ui-swing-2.0.jar
-file.reference.json-20250107.jar=C:\\Users\\PC\\Downloads\\json-20250107.jar
+file.reference.gs-core-2.0.jar=lib/gs-core-2.0.jar
+file.reference.gs-ui-swing-2.0.jar=lib/gs-ui-swing-2.0.jar
+file.reference.json-20250107.jar=lib/json-20250107.jar
 includes=**
 jar.compress=false
 javac.classpath=\
